# computationalgeometry_2

./: Makefile  README.md  bundeslaender.txt  extract-laender.sh  extract-staedte.sh
haskell/: Main.hs  USAGE.txt  area  area.cabal
haskell/CG/: Basic.hs  CG2.hs  CG2Data.hs  Polygon.hs
test/: bundeslaender.txt  test-brd.sh  test.txt
