name:                area
version:             0.1.0.0
author:              Jakob Schöttl
maintainer:          jschoett@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable area
  main-is:             Main.hs
  build-depends:       base, docopt
  default-language:    Haskell2010
